# serde-mincode

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: de.rs  lib.rs  ser.rs
