[package]
name = "serde-mincode"
description = "A minimal binary encoding for Serde-compatible types"
categories = ["encoding"]
keywords = ["serde", "serialization"]
authors = ["Adam Reichold <adam.reichold@t-online.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/adamreichold/serde-mincode"
documentation = "https://docs.rs/serde-mincode"
version = "0.1.3"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["std"] }
